# ChangeLog for dev-util/gperf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.49 2010/04/06 09:21:46 abcd Exp $

  06 Apr 2010; Jonathan Callen <abcd@gentoo.org> gperf-3.0.4.ebuild:
  Bump to EAPI=3, add prefix keywords

  02 Nov 2009; Raúl Porcel <armin76@gentoo.org> gperf-3.0.4.ebuild:
  ia64/s390/sh/sparc stable wrt #288572

  31 Oct 2009; Brent Baude <ranger@gentoo.org> gperf-3.0.4.ebuild:
  Marking gperf-3.0.4 ppc64 for bug 288572

  30 Oct 2009; Markus Meier <maekke@gentoo.org> gperf-3.0.4.ebuild:
  arm/x86 stable, bug #288572

  24 Oct 2009; nixnut <nixnut@gentoo.org> gperf-3.0.4.ebuild:
  ppc stable #288572

  22 Oct 2009; Tobias Klausmann <klausman@gentoo.org> gperf-3.0.4.ebuild:
  Stable on alpha, bug #288572

  13 Oct 2009; Jeroen Roovers <jer@gentoo.org> gperf-3.0.4.ebuild:
  Stable for HPPA (bug #288572).

  11 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  gperf-3.0.4.ebuild:
  Stable for amd64 per bug #288572.

*gperf-3.0.4 (11 Sep 2009)

  11 Sep 2009; Patrick Lauer <patrick@gentoo.org> +gperf-3.0.4.ebuild:
  Bump

  19 Jun 2008; Olivier Crête <tester@gentoo.org> gperf-3.0.3.ebuild:
  amd64 stable

  21 Feb 2008; Raúl Porcel <armin76@gentoo.org> gperf-3.0.3.ebuild:
  alpha/ia64/sparc/x86 stable

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> gperf-3.0.3.ebuild:
  Stable on ppc64

  26 Jan 2008; Sven Wegener <swegener@gentoo.org> gperf-3.0.1.ebuild,
  gperf-3.0.2.ebuild, gperf-3.0.3.ebuild:
  Drop inherit eutils. Install html docs into correct location.

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> gperf-3.0.3.ebuild:
  ppc. stable

  09 Jan 2008; Jeroen Roovers <jer@gentoo.org> gperf-3.0.3.ebuild:
  Stable for HPPA.

  15 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning dev-util/gperf to m-needed, as beu is being retired (#66608).

*gperf-3.0.3 (16 Jun 2007)

  16 Jun 2007; Anant Narayanan <anant@gentoo.org> +gperf-3.0.3.ebuild: