@@ -1,4 +1,4 @@
 DIST gperf-3.0.4.tar.gz 983500 RMD160 aeaed644501d2424f88d203dd68c997b6a90f116 SHA1 e32d4aff8f0c730c9a56554377b2c6d82d0951b8 SHA256 767112a204407e62dbc3106647cf839ed544f3cf5d0f0523aaa2508623aad63e
-EBUILD gperf-3.0.4.ebuild 747 RMD160 46c7182bf2ce8a91a115564f3405ebc6fe87fc09 SHA1 24c92d0224ae4321557671582e4a69ca939d659e SHA256 d56bede268c2cec37586097c4bda269110793e27d81385cbc47791c88c3f401c
-MISC ChangeLog 5178 RMD160 d6db329a810fc9fe163ae0a2839bfa2daee6d49f SHA1 a330d16fe01d541cffc836c26566835c8247d3c1 SHA256 bdf583f1f3dae223cdb3dd16ba66946930dce74a6a7004536e9de546212e9a17
+EBUILD gperf-3.0.4.ebuild 762 RMD160 d7851640eb1e436394eadbf286d5596d6cfc73f9 SHA1 5c5c6819f1065e0af353cccf53d787ef80d6f7fb SHA256 915ed79c2d4e587cb7dec061f7f56a6e3b146d54a632a360cd8735f3416df648
+MISC ChangeLog 5286 RMD160 82261ceb3d639e7123a24fda42861ab6d6f6ff40 SHA1 e7f4af45a495b3279476930eb7322f70fba092b2 SHA256 518c4785e58f748e681eba69a284aa8cce43fdc8d8e8b5516a55d0958002479c
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
