@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gperf
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.49 2010/04/06 09:21:46 abcd Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.50 2011/01/31 08:26:46 grobian Exp $
+
+  31 Jan 2011; Fabian Groffen <grobian@gentoo.org> gperf-3.0.4.ebuild:
+  Marked ~m68k-mint, bug #353075
 
   06 Apr 2010; Jonathan Callen <abcd@gentoo.org> gperf-3.0.4.ebuild:
   Bump to EAPI=3, add prefix keywords
